g146 - Fix search item having too much space
Description
Adjust search bar item's css property so that it will not have too much
space.

--- a/imports/stylesheets/partials/searchbar.import.less
+++ b/imports/stylesheets/partials/searchbar.import.less
@@ -210,7 +210,7 @@
                     color:#555;
                     &.search-title{
                         .truncate{
-                            width: 68%;
+                            width: 65%;
                         }
                     }
                 }
@@ -228,7 +228,6 @@
                     font-size: 12px;
                     height: 22px;
                     line-height: 22px;
-                    padding: 0 8px;
                 }
 
                 .fa-trash:hover{
@@ -268,7 +267,7 @@
                 }
             }
             .search-memo-item{
-                min-height: 76px;
+                min-height: 70px;
                 .provider_url{
                     color:#039be5;
                 }
